--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "ros/ezpdf",
+    "version": "0.12.0-RC17",
+    "description": "Porting of the well-known R&OS PDF class.",
+    "license": "MIT",
     "autoload": {
         "classmap": ["src/"]
     }
